--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=
+    , initial-scale=1.0">
     <title>Odin Calculator</title>
     <link rel="stylesheet" href="stylesheet.css">
     <script src="script.js" defer></script>
@@ -14,7 +14,7 @@
     <div class="calculator-container">
 
         <div class="display">
-        012349
+        <p class="display-screen" id="screen"></p>
         </div>
         <div class="button-row-container">
             <div class="button-row">
