create intuitive UI add known issues add style

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         </div>
         <div class="button-row-container">
             <div class="button-row">
+                <div id="clear" class="button-operator button-special">Clear</div>
+                <div id="delete" class="button-operator button-special">Delete</div>
+            </div>
+            <div class="button-row">
                 <div id="number7" class="button-number">7</div>
                 <div id="number8" class="button-number">8</div>
                 <div id="number9" class="button-number">9</div>
